syntax = "proto3";

package validation;

option java_multiple_files = true;
option java_package = "com.logistics.scm.validation";
option java_outer_classname = "ValidationProto";

service ValidationService {
  rpc ValidateCost(CostRequest) returns (CostResponse);
  rpc CheckManualEntry(ManualEntryRequest) returns (ValidationResult);
}

message CostRequest {
  string order_id = 1;
  string category = 2; // "materials" or "labor"
  double input_value = 3;
}

message CostResponse {
  string status = 1; // "APPROVED", "AUDIT_REQUIRED", "REJECTED"
  double deviation = 2;
}

message ManualEntryRequest {
  string order_id = 1;
  string category = 2; // "materials" or "labor"
  double input_value = 3;
}

message ValidationResult {
  string status = 1; // "APPROVED", "AUDIT_REQUIRED", "REJECTED"
  double deviation = 2;
  string record_hash = 3;
  string audit_priority = 4; // "high" for YELLOW verdict
}
